--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "core-js": "^2.5.4",
+    "ng2-bootstrap-modal": "^1.0.1",
     "ng2-scroll-to": "^1.0.7",
     "ng4-loading-spinner": "^1.2.3",
     "rxjs": "^6.0.0",
